== Release 4.3.9.2

   Fixed: Problem "PERSIST" Arduino Mega. #82

   Fixed: UART Simulation error V4390. #84

   Fixed: MASTER RELAY simulation bug. #83

   Fixed: When minimizing LDmicro, it always hides the IoList window.

   Updated: MASTER RELAY state colors in simulation mode.

   * Wiki: OPEN CIRCUIT, SHORT CIRCUIT
   https://github.com/LDmicro/LDmicro/wiki/OPEN-CIRCUIT,-SHORT-CIRCUIT

   Fixed: Is it correct return ? #55 Yes.

== Release 4.3.9.1

    * Wiki: MAKE PERSISTENT operation
    https://github.com/LDmicro/LDmicro/wiki/MAKE-PERSISTENT-operation

== Release 4.3.9.0

    * New: Bitwise variable operations (Unsigned)
    AND, OR, XOR, NOT, SHL, SHR, etc.

    * Updated: Arduino pin name added in I/O pin assign dialog.
    More easy to use the Arduino board with it's pin name.

    * Updated: flashMcu.bat
    You can flash the Arduino board from LDmicro by using the bootloader of the Arduino,
    you don't need any hardware, only the USB cable, and the COM port of the Arduino
    (if the driver of the Arduino is installed).
    Thanks to Gerard Jacquemin.

== Release 4.3.8.7

    * Fixed: Can't assign PWM pin because of empty PWM pins list #73

    * Fixed: When compiling ansic for arduino using REGISTER mcu,
    generated code includes "#", arduino does not compile (#72)

    * Added: For PIC16F886, PIC16F887 enabled pins:
    RE3(Input Only), RA7 (I/O when internal oscillator used), RA6 (I/O when internal oscillator used).

== Release 4.3.8.6

    * Fixed: Transliterate for non RU (#69). Fixes strange ANSIC output.

    * Fixed: pic10f200 pin number (#70)

    * Added: MOD (Integer Divide Remainder) operattion.

    * Wiki: PLC and safety
    https://github.com/LDmicro/LDmicro/wiki/PLC-and-safety

== Release 4.3.8.5

    * Fixed: PIC10F200 compile, issue #65

    * Fixed: PWM no longer possible on 16F628a, issue #61 (FAIL:Fixed in 4.3.8.7 #73)

== Release 4.3.8.4

    * Fixed: fix "Compile As" endless dialog show #60
